2014-10-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_crm.php: Fixed bug listing
	people involved in a project.

2014-10-08  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_crm.php
	  include/js/integria_crm.js
	  operation/companies/company_detail.php: Added project tab
	to company detail. Ticket #1241.

2014-10-06  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  extras/mr/13.sql
	  godmode/grupos/configurar_grupo.php
	  godmode/grupos/lista_grupos.php
	  include/functions_incidents: Added 'Mail from' field
	to group. Ticket #1274.

2014-10-06  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_form.php
	  include/functions_incidents.php
	  include/ajax/incidents.php
	  operation/incidents/incident_search.php: Added 'SLA' filter in
	search tickets. Ticket #1383.

2014-10-03  Vanessa Gil <vanessa.gil@artica.es>
	
	* general/header.php
	  godmode/setup/setup.php
	  include/functions_config.php: Added enable/disable check updates
	option in setup. Ticket #1386.

2014-10-02  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/incidents/incident_dashboard_detail.php,
	  operation/common/download_file.php: Now the ticket creator
	and assigned users can download their ticket files and acccess
	to the quick ticket update as IW although they haven't permissions
	on that group.

2014-10-02  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/ajax/incidents.php: Now the functions to do the
	quick update of a ticket change correctly the ticket last
	update value.

2014-10-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integriadb_data.sql
	  include/functions_crm.php
	  operation/contracts/contract_detail.php: Improved contract
	view to attach files. Ticket #1385.
	  
	* extras/mr/13.sql: Added file.

2014-09-22  Vanessa Gil <vanessa.gil@artica.es>
	
	* extras/create_ticket_form.php: Added file.
	Creation of tickets through a web form. Ticket #1218.
